# rust-test-coverage

./: Cargo.toml  README.md  default_16270222388199046531_0_30202.profraw
.github/workflows/: rust.yml
src/: main.rs
